--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,7 @@
 {
-    "/js/app.js": "/js/app.js?id=1868679a7ed129063655",
-    "/css/app.css": "/css/app.css?id=e5bebe2427fdad87f818",
-    "/css/auth.css": "/css/auth.css?id=d33bdc227f840ea209e1",
-    "/js/v
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/css/auth.css": "/css/auth.css",
+    "/js/vendor.js": "/js/vendor.js",
+    "/js/manifest.js": "/js/manifest.js"
+}
