Cambios Por pagar, inventarios, Compras

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ composer.lock
 app/CoreFacturalo/Templates/pdf/personalizada*
 public/templates/pdf/personalizada*
 supervisor.conf
+bootstrap/cache/config.php
