--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,7 @@
 {
-<<<<<<< HEAD
-    "/js/app.js": "/js/app.js?id=d2ae7cd2a3e271ffa88f",
-=======
-    "/js/app.js": "/js/app.js?id=10fed94a25f18e4a068f",
->>>>>>> c57cdf19c9eb5e3f364228353197da29e91ab11d
-    "/css/app.css": "/css/app.css?id=e5bebe2427fdad87f818",
-    "/css/auth.css": "/css/auth.css?id=d33bdc227f840ea209e1",
-    "/js/vendor.js": "/js/vendor.js?id=b05b8ba129b131165064",
-    "/js/manifest.js": "/js/manifest.js?id=360cf4a2ac3af2c3da19"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/css/auth.css": "/css/auth.css",
+    "/js/vendor.js": "/js/vendor.js",
+    "/js/manifest.js": "/js/manifest.js"
 }
